Moving base image to alpine linux

--- a/1.0/Dockerfile
+++ b/1.0/Dockerfile
@@ -1,24 +1,30 @@
-FROM armhf-archlinux
+FROM container4armhf/armhf-alpine
 MAINTAINER Tony Cheneau <tony.cheneau@amnesiak.org>
 
-RUN pacman -Sy \
-	&& pacman --noconfirm -S git go
+RUN echo "http://nl.alpinelinux.org/alpine/edge/community" >> /etc/apk/repositories
+RUN apk update \
+	&& apk add --no-cache git go bash musl-dev
 
-ENV INFLUXDB_VERSION 1.1.1
+ENV INFLUXDB_VERSION v1.2.3
 ENV GOPATH /tmp/go
+
+RUN go get github.com/sparrc/gdm
+ENV PATH=$PATH:$GOPATH/bin
 
 # Build InfluxDB from source
 RUN mkdir -p $GOPATH/src/github.com/influxdata \
 	&& cd $GOPATH/src/github.com/influxdata \
-	&& git clone https://github.com/influxdata/influxdb \
+	&& git clone --depth 1 https://github.com/influxdata/influxdb --branch ${INFLUXDB_VERSION}\
 	&& cd influxdb \
+	&& gdm restore \
 	#&& git checkout tags/v${INFLUXDB_VERSION} \
-	&& git checkout master \
 	# go get -u sometime fails first time, but succeeds second time
 	# (see https://github.com/golang/go/issues/9224)
 	# therefore, we try it a second time, if it failed the first time
-	&& ( go get -u -f ./... || go get -u -f ./... || true) \
-	&& go build ./... \
+	# && ( go get -u -f ./... || go get -u -f ./... || true) \
+	&& go clean ./... \
+	&& go install ./... \
+	&& ls $GOPATH/bin \
 	&& mv $GOPATH/bin/* /usr/bin \
 	&& rm -rf $GOPATH/*
 
